# top-10-price

./: pyproject.toml
top_10_price/: scrapy.cfg
top_10_price/top_10_price/: items.py  middlewares.py  pipelines.py  settings.py
